<resources>
    <string name="app_name">IQWhizz</string>
    <string name="send_username">Username</string>
    <string name="send_password">Password</string>
    <string name="connexion_button">Sign in</string>
    <string name="signup_button">Sign up</string>
    <string name="choose_totaltest">Complete test</string>
    <string name="choose_quicktest">Quick test</string>
    <string name="choose_flashtest">Flash test</string>
    <string name="choose_categories">Categories</string>
    <string name="choose_myscores">My scores</string>
    <string name="choose_category">Choose your favorite category</string>
    <string name="logicaltest">Logical test</string>
    <string name="mathtest">Mathematical test</string>
    <string name="memorytest">Memory test</string>
    <string name="spatialtest">Spatial test</string>
    <string name="mentalarith">Mental arithmetic</string>
    <string name="paperfold">Paper folding</string>
    <string name="menu">Menu</string>
    <string name="_40_minutes_test">40 minutes test</string>
    <string name="_5_minutes_test">5 minutes test</string>
    <string name="choose_your_categorie_to_train_your_brain">Choose your categorie to train your brain</string>
    <string name="check_your_score">Check your score</string>
    <string name="welcome_to_iq_whizz">Welcome to IQ Whizz !</string>
    <string name="tap_to_continue">Tap to continue</string>
    <string name="it_tests_your_rapidity">Test your rapidity</string>
    <string name="first_menu">First menu</string>
    <string name="second_menu">Second menu</string>
    <string name="third_menu">Third menu</string>
    <string name="first_fragment">First Fragment</string>
    <string name="second_fragment">Second fragment</string>
    <string name="third_fragment">Third fragment</string>
    <string name="hamburger">hamburger</string>
    <string name="sign_up">Sign up</string>
    <string name="please_write_a_correct_locality">Invalid locality</string>
    <string name="type_your_locality">Type your locality</string>
    <string name="locality">Locality</string>
    <string name="invalid_birthyear">Invalid birthyear</string>
    <string name="type_your_birthyear">Type your birthyear</string>
    <string name="your_birthyear">Birthyear</string>
    <string name="write_a_password_please">Invalid password (minimum 6 letters)</string>
    <string name="write_your_password">Type your password</string>
    <string name="mot_de_passe">Password</string>
    <string name="please_write_a_correct_username_minimum_3_letter">Invalid username (minimum 3 letters)</string>
    <string name="type_your_username">Type your username</string>
    <string name="username">Username</string>
    <string name="practice_different_categories_to_improve_your_iq_results_or_for_healty_brain_training">Practice different categories to improve your IQ results or for healthy brain training!</string>
    <string name="Rules">Rules</string>
    <string name="category">Category</string>
    <string name="rule_1">1. A correct answer will add one point to your score</string>
    <string name="rule_2">2. A wrong answer will add no point to your score</string>
    <string name="rule_3">3. If you skip, it will add no point to your score</string>
    <string name="go">Let\'s go!</string>
    <string name="language">Language</string>
    <string name="sound">Sound</string>
    <string name="francais">Français</string>
    <string name="anglais">anglais</string>
    <string name="flash">4. You have 5 minutes to answer as much questions as possible</string>
    <string name="complete">4. You have 40 minutes to answer the 40 questions</string>
    <string name="quick">4. You have 5 minutes to answer the 5 questions</string>
    <string name="friends">Friends</string>
    <string name="ranking">Ranking</string>
    <string name="engels">engels</string>
    <string name="english">English</string>
    <string name="title_activity_my_result">MyResult</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="My_profile">My profile</string>
    <string name="add_a_friend">Add a friend</string>
    <string name="add">Add</string>
    <string name="friend_s_username">Friend\'s username</string>
    <string name="cancel">Cancel</string>
    <string name="Add_a_friend">Add a friend</string>
    <string name="reponse1">Answer 1</string>
    <string name="r_ponse_2">Answer 2</string>
    <string name="r_ponse_3">Answer 3</string>
    <string name="r_ponse_4">Answer 4</string>
    <string name="r_ponse_5">Answer 5</string>
    <string name="r_ponse_6">Answer 6</string>
    <string name="r_ponse_7">Answer 7</string>
    <string name="r_ponse_10">Answer 10</string>
    <string name="r_ponse_11">Answer 11</string>
    <string name="r_ponse_12">Answer 12</string>
    <string name="r_ponse_8">Answer 8</string>
    <string name="r_ponse_14">Answer 14</string>
    <string name="r_ponse_13">Answer 13</string>
    <string name="r_ponse_18">Answer 18</string>
    <string name="r_ponse_19">Answer 19</string>
    <string name="r_ponse_20">Answer 20</string>
    <string name="r_ponse_40">Answer 40</string>
    <string name="r_ponse_41">Answer 41</string>
    <string name="r_ponse_42">Answer 42</string>
    <string name="r_ponse_43">Answer 43</string>
    <string name="r_ponse_44">Answer 44</string>
    <string name="r_ponse_45">Answer 45</string>
    <string name="r_ponse_46">Answer 46</string>
    <string name="r_ponse_47">Answer 47</string>
    <string name="r_ponse_39">Answer 39</string>
    <string name="r_ponse_38">Answer 38</string>
    <string name="r_ponse_37">Answer 37</string>
    <string name="r_ponse_36">Answer 36</string>
    <string name="r_ponse_35">Answer 35</string>
    <string name="r_ponse_34">Answer 34</string>
    <string name="r_ponse_33">Answer 33</string>
    <string name="r_ponse_32">Answer 32</string>
    <string name="r_ponse_31">Answer 31</string>
    <string name="r_ponse_30">Answer 30</string>
    <string name="r_ponse_29">Answer 29</string>
    <string name="r_ponse_28">Answer 28</string>
    <string name="r_ponse_27">Answer 27</string>
    <string name="r_ponse_26">Answer 26</string>
    <string name="r_ponse_25">Answer 25</string>
    <string name="r_ponse_24">Answer 24</string>
    <string name="r_ponse_23">Answer 23</string>
    <string name="r_ponse_22">Answer 22</string>
    <string name="r_ponse_21">Answer 21</string>
    <string name="r_ponse_9">Answer 9</string>
    <string name="see_my_mistakes">See My Mistakes</string>
    <string name="your_score_is">Your score is :</string>
    <string name="your_iq_is">Your IQ is :</string>
    <string name="score">score</string>
    <string name="your_best_iq_is">Your best IQ is :</string>
</resources>
