<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">



    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/ecriture"
        android:layout_marginTop="@dimen/toptextsanstitle"
        android:layout_gravity="center"
        android:text="@string/choose_totaltest"
        android:textSize="@dimen/text" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/ecriture"
        android:layout_marginBottom="@dimen/bott"
        android:layout_gravity="center"
        android:text="@string/_40_minutes_test" />

    <TextView
        android:id="@+id/quicktest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/ecriture"
        android:text="@string/choose_quicktest"
        android:textSize="@dimen/text" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bott"
        android:layout_gravity="center"
        android:textColor="@color/ecriture"
        android:text="@string/_5_minutes_test" />

    <TextView
        android:id="@+id/flashtest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/ecriture"
        android:text="@string/choose_flashtest"
        android:textSize="@dimen/text" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/ecriture"
        android:layout_marginBottom="@dimen/bott"
        android:text="@string/it_tests_your_rapidity" />


    <TextView
        android:id="@+id/categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/choose_categories"
        android:textColor="@color/ecriture"
        android:textSize="@dimen/text" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/ecriture"
        android:layout_marginBottom="@dimen/bott"
        android:text="@string/choose_your_categorie_to_train_your_brain" />

    <TextView
        android:id="@+id/myscores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/choose_myscores"
        android:textColor="@color/ecriture"
        android:textSize="@dimen/text" />


    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/bott"
        android:textColor="@color/ecriture"
        android:text="@string/check_your_score" />









</LinearLayout>