<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".inscription">

    <!--<TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:gravity="center"
        android:layout_weight="1.5"
        android:textSize="30dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" /> -->

    <TextView
        android:id="@+id/textView2"
        android:layout_marginTop="@dimen/toptextsanstitle"
        android:textSize="@dimen/text"
        android:textColor="@color/ecriture"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/username" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text"
        android:ems="10"
        android:maxLength="15"
        android:layout_gravity="center"
        android:hint="@string/type_your_username"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/subtext"
        android:text="@string/please_write_a_correct_username_minimum_3_letter"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/ecriture"
        android:layout_gravity="center"
        android:text="@string/mot_de_passe"
        android:textSize="@dimen/text" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/text"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:hint="@string/write_your_password"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/write_a_password_please"
        android:textSize="@dimen/subtext"
        android:visibility="invisible"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/textView6"
        android:textSize="@dimen/text"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/ecriture"
        android:text="@string/your_birthyear" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/text"
        android:ems="10"
        android:hint="@string/type_your_birthyear"
        android:maxLength="4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/invalid_birthyear"
        android:textSize="@dimen/subtext"
        android:visibility="invisible"
        android:textColor="@color/colorAccent" />

    <TextView
        android:textSize="@dimen/text"
        android:layout_gravity="center"
        android:textColor="@color/ecriture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locality" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/text"
        android:ems="10"
        android:hint="@string/type_your_locality" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/subtext"
        android:text="@string/please_write_a_correct_locality"
        android:textColor="@color/colorAccent"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:textColor="@color/ecriture"
        android:text="@string/sign_up"/>

</LinearLayout>