<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/titletop"
            android:layout_marginBottom="@dimen/bott"
            android:gravity="center"
            android:text="@string/Rules"
            android:textColor="@color/ecriture"
            android:textSize="@dimen/text"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/math"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/bott"
            android:gravity="center"
            android:text="@string/rule_1"
            android:textColor="@color/blanc"
            android:textSize="@dimen/text" />

        <TextView
            android:id="@+id/memory"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/bott"
            android:gravity="center"
            android:text="@string/rule_2"
            android:textColor="@color/blanc"
            android:textSize="@dimen/text" />

        <TextView
            android:id="@+id/spatial"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/bott"
            android:gravity="center"
            android:text="@string/rule_3"
            android:textColor="@color/blanc"
            android:textSize="@dimen/text" />

        <Button
            android:id="@+id/go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/boutonctopbot"
            android:text="@string/go"
            android:textColor="@color/ecriture"
            android:textSize="@dimen/bouton" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>