<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:layout_width="@dimen/size_logo"
        android:layout_height="@dimen/size_logo"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/titlewtop"
        android:src="@drawable/logobon" />
-->
    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textctop"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/send_username"
        android:textColor="@color/ecriture"
        android:textSize="@dimen/text" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/send_password"
        android:textColor="@color/ecriture"
        android:textSize="@dimen/text" />

    <Button
        android:id="@+id/men"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/boutonctopbot"
        android:layout_marginBottom="@dimen/boutonctopbot"
        android:text="@string/connexion_button"
        android:textColor="@color/ecriture"
        android:textSize="@dimen/bouton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/boutonctopbot"
        android:layout_marginBottom="@dimen/boutonctopbot"
        android:text="Or"
        android:textColor="@color/ecriture"
        android:textSize="@dimen/text"
        android:textStyle="bold" />


    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/boutonctopbot"
        android:layout_gravity="center"
        android:text="@string/signup_button"
        android:textColor="@color/ecriture"
        android:textSize="@dimen/bouton" />

</LinearLayout>