<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:background="@drawable/background"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- include your toolbar layout-->
        <include layout="@layout/toolbar"/>

        <!-- Let's add fragment -->
        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ScrollView01"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <Button
                        android:id="@+id/rep1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/boutonctopbot"
                        android:text="@string/reponse1"
                        android:textColor="@color/ecriture"
                        android:textSize="@dimen/bouton" />

                    <Button
                        android:id="@+id/rep2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/boutonctopbot"
                        android:text="@string/r_ponse_2"
                        android:textColor="@color/ecriture"
                        android:textSize="@dimen/bouton" />

                    <Button
                        android:id="@+id/rep3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/boutonctopbot"
                        android:text="@string/r_ponse_3"
                        android:textColor="@color/ecriture"
                        android:textSize="@dimen/bouton" />


                    <Button
                        android:id="@+id/rep4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/boutonctopbot"
                        android:text="@string/r_ponse_4"
                        android:textColor="@color/ecriture"
                        android:textSize="@dimen/bouton" />

                    <Button
                        android:id="@+id/rep5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/boutonctopbot"
                        android:text="@string/r_ponse_5"
                        android:textColor="@color/ecriture"
                        android:textSize="@dimen/bouton" />

                </LinearLayout>
            </ScrollView>
        </FrameLayout>
    </LinearLayout>


</android.support.v4.widget.DrawerLayout>