<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    android:background="@drawable/background"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- include your toolbar layout-->
        <include layout="@layout/toolbar"/>

        <!-- Let's add fragment -->
        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/math"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/titletop"
                    android:layout_marginBottom="@dimen/bott"
                    android:gravity="center"
                    android:text="@string/rule_1"
                    android:textColor="@color/blanc"
                    android:textSize="@dimen/text" />

                <TextView
                    android:id="@+id/memory"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/bott"
                    android:gravity="center"
                    android:text="@string/rule_2"
                    android:textColor="@color/blanc"
                    android:textSize="@dimen/text" />

                <TextView
                    android:id="@+id/spatial"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/bott"
                    android:gravity="center"
                    android:text="@string/rule_3"
                    android:textColor="@color/blanc"
                    android:textSize="@dimen/text" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/bott"
                    android:gravity="center"
                    android:text="@string/flash"
                    android:textColor="@color/blanc"
                    android:textSize="@dimen/text" />

                <Button
                    android:id="@+id/go"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/go"
                    android:textColor="@color/ecriture"
                    android:textSize="@dimen/bouton" />

            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
    <!--
         Navigation view to show the menu items
    -->
    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        app:menu="@menu/nav_item" />

</android.support.v4.widget.DrawerLayout>
